force-app/main/default/objects/BT_Venue__c/BT_Venue__c.object-meta.xml
<CustomObject>
    <label>BT Venue</label>
    <nameField>
        <label>Venue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT Venues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>