force-app/main/default/objects/BT_Venue__c/fields/IsOnline__c.field-meta.xml
<CustomField>
    <fullName>IsOnline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Online</label>
    <type>Checkbox</type>
</CustomField>