force-app/main/default/objects/BT_Venue__c/fields/Street_Type__c.field-meta.xml
<CustomField>
    <fullName>Street_Type__c</fullName>
    <label>Street Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>