force-app/main/default/objects/BT_Venue__c/fields/Venue_Contact_Email_address__c.field-meta.xml
<CustomField>
    <fullName>Venue_Contact_Email_address__c</fullName>
    <label>Venue Contact Email address</label>
    <type>Email</type>
</CustomField>