force-app/main/default/objects/BT_Venue__c/fields/Venue_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Venue_Contact_Name__c</fullName>
    <label>Venue Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>