force-app/main/default/objects/BT_Venue__c/fields/Venue_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Venue_Contact_Phone_Number__c</fullName>
    <label>Venue Contact Phone Number</label>
    <type>Phone</type>
</CustomField>