force-app/main/default/objects/BT_Venue__c/fields/Venue_Site__c.field-meta.xml
<CustomField>
    <fullName>Venue_Site__c</fullName>
    <label>Venue Site</label>
    <type>Url</type>
</CustomField>