force-app/main/default/objects/BT_Venue__c/fields/Zip_4__c.field-meta.xml
<CustomField>
    <fullName>Zip_4__c</fullName>
    <label>Zip+4</label>
    <length>12</length>
    <type>Text</type>
</CustomField>