force-app/main/default/objects/BT_Venue__c/validationRules/phone_number_formatted_10_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>phone_number_formatted_10_digits</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Venue_Contact_Phone_Number__c, &quot;^$|\\D*1?(\\D*\\d{3}){3}\\d\\D*&quot;)) 
&amp;&amp; NOT( $Setup.Bypass_Validation_rules__c.Disable_Validation_Rules__c )</errorConditionFormula>
    <errorDisplayField>Venue_Contact_Phone_Number__c</errorDisplayField>
    <errorMessage>Phone number should not be text and should be 10 digits</errorMessage>
</ValidationRule>