force-app/main/default/objects/BT_Venue__c/validationRules/ZipCodeValueNumeric.validationRule-meta.xml
<ValidationRule>
    <fullName>ZipCodeValueNumeric</fullName>
    <active>true</active>
    <description>Validates if the zip code has a value and is numeric</description>
    <errorConditionFormula>AND(OR(NOT(ISNUMBER(ZipCode__c)),(CONTAINS(ZipCode__c, &quot;.&quot;))),  NOT(ISBLANK(ZipCode__c)))</errorConditionFormula>
    <errorDisplayField>ZipCode__c</errorDisplayField>
    <errorMessage>Zip Code must contain only numeric values</errorMessage>
</ValidationRule>