force-app/main/default/objects/BT_Venue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Street_Number__c</columns>
    <columns>Street_Type__c</columns>
    <columns>City__c</columns>
    <columns>ZipCode__c</columns>
    <columns>Zip_4__c</columns>
    <columns>Country__c</columns>
    <columns>Description__c</columns>
    <columns>IsOnline__c</columns>
    <columns>State__c</columns>
    <columns>Street__c</columns>
    <columns>Venue_Site__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>